# xbasic64

./: CLAUDE.md  Cargo.toml  LANGREF.md  LICENSE  README.md  design.md
.github/workflows/: TestingCI.yml
examples/: arrays.bas  dataread.bas  factorial.bas  fibonacci.bas  forloop.bas  gosub.bas  hello.bas  math.bas  selectcase.bas  strings.bas
scripts/: fix-headers.sh
src/: abi.rs  codegen.rs  lexer.rs  main.rs  parser.rs  runtime.rs
src/runtime/: data.s  data_defs.s  file.s  input.s  math.s  print.s  string.s
src/runtime/sysv/: data_defs.s  file.s  print.s
src/runtime/win64-native/: data.s  data_defs.s  file.s  input.s  math.s  print.s  string.s
tests/: integration.rs
tests/arithmetic/: mod.rs
tests/arrays/: mod.rs
tests/common/: mod.rs
tests/control/: mod.rs
tests/data/: mod.rs
tests/file_io/: mod.rs
tests/input/: mod.rs
tests/math/: mod.rs
tests/print/: mod.rs
tests/procedures/: mod.rs
tests/strings/: mod.rs
tests/types/: mod.rs
tests/variables/: mod.rs
